[package]
name = "cvkg-svg-filters"
version = "0.2.16"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sydonayrex/cvkg"
description = "WGPU-based SVG filter primitives for CVKG"

[dependencies]
wgpu = "29"
bytemuck = { version = "1.25", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
usvg = "0.47"

[dev-dependencies]
strict-num = "0.2"
