[package]
name = "cvkg-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Automated visual regression testing harness for CVKG"

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.1.15" }
cvkg-render-gpu = { path = "../cvkg-render-gpu", version = "0.1.15" }
image = "0.24"
bytemuck = "1.13"
pollster = "0.3"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
walkdir = "2.3"
cvkg-macros = { path = "../cvkg-macros", version = "0.1.15" }
cvkg-components = { path = "../cvkg-components", version = "0.1.15" }
cvkg-layout = { path = "../cvkg-layout", version = "0.1.15" }
cvkg-vdom = { path = "../cvkg-vdom", version = "0.1.15" }
cvkg-render-web = { path = "../cvkg-render-web", version = "0.1.15" }
cvkg-scene = { path = "../cvkg-scene", version = "0.1.15" }
cvkg-anim = { path = "../cvkg-anim", version = "0.1.15" }
cvkg-flow = { path = "../cvkg-flow", version = "0.1.15" }
serde_json = "1.0"
insta = { version = "1.34", features = ["json"] }
