[package]
publish = false
name = "cvkg-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Automated visual regression testing harness for CVKG"

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.2.10" }
cvkg-render-gpu = { path = "../cvkg-render-gpu", version = "0.2.10" }
image = "0.25"
bytemuck = "1.14"
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
walkdir = "2.3"
cvkg-macros = { path = "../cvkg-macros", version = "0.2.10" }
cvkg-components = { path = "../cvkg-components", version = "0.2.10" }
cvkg-layout = { path = "../cvkg-layout", version = "0.2.10" }
cvkg-vdom = { path = "../cvkg-vdom", version = "0.2.10" }
cvkg-scene = { path = "../cvkg-scene", version = "0.2.10" }
cvkg-anim = { path = "../cvkg-anim", version = "0.2.10" }
cvkg-flow = { path = "../cvkg-flow", version = "0.2.10" }
serde_json = "1.0"
insta = { version = "1.34", features = ["json"] }
# Property-based testing
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }
# Fuzz testing support
libfuzzer-sys = "0.4"
cvkg-runic-text = { path = "../cvkg-runic-text", version = "0.2.10" }
glam = { version = "0.30" }