[package]
name = "cvkg-themes"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.1.9" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
